@@ -1,5 +1,7 @@
 .libreoffice-toolbar {
     background-image: none;
+    border: none;
+    box-shadow: none;
 }
 .libreoffice-toolbar button:hover {
     background-image: -gtk-gradient (linear, left top, left bottom,
